welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: value =- is not a member of Int
		if (x%2==1) {a=b;b=0;y=-1}
                                      ^ZigZag:8: error: value by is not a member of Int
		for (j<-a by y to b){
                          ^